# DCN1003-Group21-2026

./: .gitignore  .gitmodules  CMakeLists.txt  config.h.in  readme.md
Client/: CMakeLists.txt  main.cpp
Client/include/: client.h
Client/src/: client.cpp
Driver/: CMakeLists.txt
Driver/include/: CmdHandler.h  SocketHandler.h  cmd_type.h  database.h  error.h  log.h  protocol.h  socket.h
Driver/src/: SocketHandler.cpp  database.cpp  log.cpp  protocol.cpp  socket.cpp  timetable.db
Service/: CMakeLists.txt  main.cpp
Service/include/: service.h
Service/src/: service.cpp
Tests/: CMakeLists.txt  test_database.cpp  test_database_file.cpp  test_log.cpp  test_openssl.cpp  test_protobuf.cpp  test_protocol.cpp
Tests/include/: test.h
data/: DCN.db
documents/: architecture.md  client_bridge.md  cmd_handler_design.md  database_define.md  protocol_define.md
driver/: CMakeLists.txt
driver/include/: CmdHandler.h  SocketHandler.h  cmd_type.h  database.h  error.h  log.h  password_hash.h  protocol.h  winsock_guard.h
driver/src/: CmdHandler.cpp  SocketHandler.cpp  database.cpp  db_administrators_handle.cpp  db_courses_handle.cpp  password_hash.cpp  protocol.cpp  winsock_guard.cpp
programs/Client/: CMakeLists.txt
programs/Client/include/: client_main.h  cmdreg.h  connect_to.h
programs/Client/src/: client.cpp  client_main.cpp  cmdreg.cpp  connect_to.cpp
programs/Server/: CMakeLists.txt  start_server.bat
programs/Server/include/: cmdreg.h  listener.h  server_main.h
programs/Server/src/: cmdreg.cpp  listener.cpp  server_main.cpp  service.cpp
scripts/: _check_db.py  import_courses.py  import_xlsx.py
tests/: CMakeLists.txt  test_client_e2e.cpp  test_cmdreg.cpp  test_database.cpp  test_database_curd.cpp  test_database_file.cpp  test_database_multithread.cpp  test_database_real_query.cpp  test_listener.cpp  test_log.cpp  test_openssl.cpp  test_protobuf.cpp  test_protocol.cpp  test_socket_handler.cpp
